[package]
name = "kmeans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
csv = "1.2.2"
serde = { version = "1.0.183", features = ["derive"] }
structopt = "0.3.26"

[dev-dependencies]
proptest = "1.0"

